--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,8 +75,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: MyFonts
   #     fonts:
+  #         - asset: assets/fonts/Highbrow.ttf
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
