--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
+  firebase_storage: ^11.0.10
+  fluttertoast: ^8.1.2
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
