--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   fluttertoast: ^8.1.2
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  dartz: ^0.10.1
+  get_it: ^7.2.0
+  flutter_facebook_auth: ^5.0.7
+  google_sign_in: ^5.4.3
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
