--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: 
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,9 +49,12 @@ dependencies:
   flutter_bloc: ^8.1.1
   dartz: ^0.10.1
   get_it: ^7.2.0
-  flutter_facebook_auth: ^5.0.7
   google_sign_in: ^5.4.3
   uuid: ^3.0.7
+  intl: ^0.17.0
+  google_fonts: ^4.0.0
+  flutter_localization: ^0.1.10
+  weekly_date_picker: ^1.3.0
 
 dev_dependencies:
   flutter_test:
